Bugfix: Adding whitespace normal to Overlay element (#2307)
* Adding whitespace normal to Overlay

* Stylelint auto-fixes

* Create chilled-dragons-sin.md

--- a/src/overlay/overlay.scss
+++ b/src/overlay/overlay.scss
@@ -18,6 +18,7 @@ $primer-borderRadius-large: 0.75rem;
   width: min(var(--overlay-width), 100vw - 2rem);
   min-width: 192px;
   max-height: min(calc(100vh - 2rem), var(--overlay-height));
+  white-space: normal;
   flex-direction: column;
   background-color: var(--color-canvas-overlay);
   border-radius: $primer-borderRadius-large;
